WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218031
REGRESSION(
r268476
): [ macOS ] tiled-drawing/scrolling/non-fast-region/handlers-in-iframes.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=218031
Summary
REGRESSION(r268476): [ macOS ] tiled-drawing/scrolling/non-fast-region/handle...
Hector Lopez
Reported
2020-10-21 09:29:18 PDT
tiled-drawing/scrolling/non-fast-region/handlers-in-iframes.html Test is a flaky failure according to history on macOS. First occurrence of failure is at
r268478
but I believe it may be due to
r268476
. History:
https://results.webkit.org/?suite=layout-tests&test=tiled-drawing%2Fscrolling%2Fnon-fast-region%2Fwheel-handler-fixed-child.html
Diff: --- /Volumes/Data/slave/catalina-debug-tests-wk2/build/layout-test-results/tiled-drawing/scrolling/non-fast-region/handlers-in-iframes-expected.txt +++ /Volumes/Data/slave/catalina-debug-tests-wk2/build/layout-test-results/tiled-drawing/scrolling/non-fast-region/handlers-in-iframes-actual.txt @@ -13,8 +13,10 @@ (rect (0,0) width=800 height=600) (wheel event listener region (rect (28,20) width=108 height=108) + (rect (28,184) width=108 height=108) (non-passive (rect (28,20) width=108 height=108) + (rect (28,184) width=108 height=108) ) ) ) May need a re-baseline of results
Attachments
Patch
(9.85 KB, patch)
2020-10-22 16:13 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-10-21 09:29:37 PDT
<
rdar://problem/70532268
>
Hector Lopez
Comment 2
2020-10-21 09:37:19 PDT
Test expectation while investigated:
https://trac.webkit.org/changeset/268799/webkit
Alexey Proskuryakov
Comment 3
2020-10-21 19:00:53 PDT
> May need a re-baseline of results
I don't think that this can help a flaky failure.
Ryan Haddad
Comment 4
2020-10-21 22:12:22 PDT
(In reply to Hector Lopez from
comment #0
)
> History: > >
https://results.webkit.org/?suite=layout-tests&test=tiled
- > drawing%2Fscrolling%2Fnon-fast-region%2Fwheel-handler-fixed-child.html
Correct link:
https://results.webkit.org/?suite=layout-tests&test=tiled-drawing%2Fscrolling%2Fnon-fast-region%2Fhandlers-in-iframes.html
Simon Fraser (smfr)
Comment 5
2020-10-22 16:13:18 PDT
Created
attachment 412141
[details]
Patch
EWS
Comment 6
2020-10-22 18:38:29 PDT
Committed
r268902
: <
https://trac.webkit.org/changeset/268902
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412141
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug