REGRESSION(r268476): [ macOS ] tiled-drawing/scrolling/non-fast-region/handlers-in-iframes.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=218031 <rdar://problem/70532268>

Reviewed by Tim Horton.
Source/WebCore:

The test exercises wheel event regions in non-composited iframes. These were not reliably updated
when all wheel event handlers were removed, because Frame::invalidateContentEventRegionsIfNeeded()
early-returned if there were no handlers (but we need to update the regions in this case). Clean
up the logic here, and pass in a "reason" so we know that we should do work when there are no
handlers.

Document::wheelEventHandlersChanged() also needs to invalidate style, since flags in style
are used for wheel event region building, and it needs to call invalidateContentEventRegionsIfNeeded().

* dom/Document.cpp:
(WebCore::Document::wheelEventHandlersChanged):
(WebCore::Document::didAddWheelEventHandler):
(WebCore::Document::didRemoveWheelEventHandler):
* dom/Document.h:
* page/Frame.cpp:
(WebCore::Frame::invalidateContentEventRegionsIfNeeded):
* page/Frame.h:
* page/FrameView.cpp:
(WebCore::FrameView::didLayout):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/230820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268902 268f45cc-cd09-0410-ab3c-d52691b4dbfc